force-app/main/default/objects/Cycle__c/fields/Number_of_Blast_Embryos_Vitrified__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blast_Embryos_Vitrified__c</fullName>
    <label>Number of Blast Embryos Vitrified</label>
    <summarizedField>Cycle_Event__c.Number_of_Blasts_Vitrified__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>