force-app/main/default/objects/Cycle__c/fields/Number_of_Cleavage_State_Vitrified__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cleavage_State_Vitrified__c</fullName>
    <label>Number of Cleavage State Emb Vitrified</label>
    <summarizedField>Cycle_Event__c.Number_of_Cleavage_State_Embryos_Vit__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>