force-app/main/default/objects/Cycle__c/fields/Number_of_Cycle_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cycle_Days__c</fullName>
    <label>Number of Cycle Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>