force-app/main/default/objects/Cycle__c/fields/Number_of_Eggs_Slow_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eggs_Slow_Frozen__c</fullName>
    <label>Number of Eggs Slow Frozen</label>
    <summarizedField>Cycle_Event__c.Number_of_Eggs_Slow_Frozen__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>