force-app/main/default/objects/Cycle__c/fields/Number_of_Foetal_Hearts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Foetal_Hearts__c</fullName>
    <description>Number of fetal hearts seen on first ultrasound (intrauterine only)
This field must be completed if PR_CLIN (ANZARD Definition for Clinical Pregnancy) field is “y”.</description>
    <label>Number of Foetal Hearts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>