force-app/main/default/objects/Cycle__c/fields/OI_Type__c.field-meta.xml
<CustomField>
    <fullName>OI_Type__c</fullName>
    <label>OI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>FSH</fullName>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>