force-app/main/default/objects/Cycle__c/fields/OPU_Date__c.field-meta.xml
<CustomField>
    <fullName>OPU_Date__c</fullName>
    <label>OPU Date</label>
    <summarizedField>Cycle_Event__c.Event_Date_and_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Cycle_Event__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>OPU Event</value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>