force-app/main/default/objects/Cycle__c/fields/Outcome_of_Second_Born_Baby__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Second_Born_Baby__c</fullName>
    <label>Outcome of Second Born Baby</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Baby_Outcome</valueSetName>
    </valueSet>
</CustomField>