force-app/main/default/objects/Cycle__c/fields/Ov_Stim_Via_FSH__c.field-meta.xml
<CustomField>
    <fullName>Ov_Stim_Via_FSH__c</fullName>
    <label>Ov Stim Via FSH?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>