force-app/main/default/objects/Cycle__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <formula>Patient__r.Partner__r.FirstName &amp;&quot; &quot;&amp;Patient__r.Partner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner</label>
    <type>Text</type>
</CustomField>