force-app/main/default/objects/Cycle__c/fields/Partner_DOB__c.field-meta.xml
<CustomField>
    <fullName>Partner_DOB__c</fullName>
    <formula>Patient__r.Partner__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner DOB</label>
    <type>Date</type>
</CustomField>