force-app/main/default/objects/Cycle__c/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <formula>Patient__r.Partner__r.Patient_ID_Display_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner ID</label>
    <type>Text</type>
</CustomField>