force-app/main/default/objects/Cycle__c/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <formula>IF( ISBLANK(Patient__r.MailingAddress),&quot;&quot;,Patient__r.MailingStreet&amp;&quot;, &quot;&amp; Patient__r.MailingCity &amp;&quot;, &quot;&amp; Patient__r.MailingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Address</label>
    <type>Text</type>
</CustomField>