force-app/main/default/objects/Cycle__c/fields/Patient_Details_for_Flows__c.field-meta.xml
<CustomField>
    <fullName>Patient_Details_for_Flows__c</fullName>
    <formula>Patient__r.FirstName&amp;&quot; &quot;&amp;  Patient__r.LastName&amp;&quot;, &quot;&amp;  TEXT(DAY(Patient__r.Birthdate))&amp;&quot;/&quot;&amp;TEXT(MONTH(Patient__r.Birthdate))&amp;&quot;/&quot;&amp;TEXT(YEAR(Patient__r.Birthdate))&amp;&quot;, &quot;&amp;  Patient__r.Patient_ID_Display_Formula__c  &amp;&quot;, &quot;&amp;Patient__r.Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Details for Flows</label>
    <type>Text</type>
</CustomField>