force-app/main/default/objects/Cycle__c/fields/Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>Patient_DOB__c</fullName>
    <formula>Patient__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient DOB</label>
    <type>Date</type>
</CustomField>