force-app/main/default/objects/Cycle__c/fields/PGT_A_Reason__c.field-meta.xml
<CustomField>
    <fullName>PGT_A_Reason__c</fullName>
    <label>PGT A Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recurrent Miscarriage</fullName>
            </value>
            <value>
                <fullName>Recurrent Implantation Failure</fullName>
            </value>
            <value>
                <fullName>Previous Abnormal Pregnancy</fullName>
            </value>
            <value>
                <fullName>Patient Choice</fullName>
            </value>
            <value>
                <fullName>Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>