force-app/main/default/objects/Cycle__c/fields/Pregnancy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_End_Date__c</fullName>
    <description>Used specifically for miscarriages and terminations. Links to ANZARD Data</description>
    <label>Pregnancy End Date</label>
    <type>Date</type>
</CustomField>