force-app/main/default/objects/Cycle__c/fields/Pregnancy_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Outcome__c</fullName>
    <label>Pregnancy Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Pregnant</fullName>
            </value>
            <value>
                <fullName>Biochem</fullName>
            </value>
            <value>
                <fullName>Positive BHCG</fullName>
            </value>
            <value>
                <fullName>Ectopic</fullName>
            </value>
            <value>
                <fullName>Clinical Pregnancy</fullName>
            </value>
            <value>
                <fullName>Missed Miscarriage</fullName>
            </value>
            <value>
                <fullName>Under 20 Week Miscarriage</fullName>
            </value>
            <value>
                <fullName>Over 20 Week Miscarriage</fullName>
            </value>
            <value>
                <fullName>Still Birth</fullName>
            </value>
            <value>
                <fullName>Live Birth</fullName>
            </value>
            <value>
                <fullName>Pregnancy Terminated</fullName>
            </value>
            <value>
                <fullName>Heterotopic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>