force-app/main/default/objects/Cycle__c/fields/PRP__c.field-meta.xml
<CustomField>
    <fullName>PRP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRP</label>
    <type>Checkbox</type>
</CustomField>