force-app/main/default/objects/Cycle__c/fields/Recipient_Patient__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycles (Recipient Patient)</relationshipLabel>
    <relationshipName>Cycles2</relationshipName>
    <type>Lookup</type>
</CustomField>