force-app/main/default/objects/Cycle__c/fields/Recommended_OPU_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommended_OPU_Type__c</fullName>
    <label>Recommended OPU Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procedure room with Nitrous</fullName>
            </value>
            <value>
                <fullName>Procedure Room with anaesthetic</fullName>
            </value>
            <value>
                <fullName>Main Theatres with anaesthetic Dr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>