force-app/main/default/objects/Cycle__c/fields/Second_Born_Date_of_Neonatal_Death__c.field-meta.xml
<CustomField>
    <fullName>Second_Born_Date_of_Neonatal_Death__c</fullName>
    <label>Second-Born Date of Neonatal Death</label>
    <type>Date</type>
</CustomField>