force-app/main/default/objects/Cycle__c/fields/Semen_Prep_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Semen_Prep_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Semen Prep Event Created</label>
    <type>Checkbox</type>
</CustomField>