force-app/main/default/objects/Cycle__c/fields/Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semen Sample</label>
    <referenceTo>Semen_Sample__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>