force-app/main/default/objects/Cycle__c/fields/Sex_of_Intending_Parents_ANZARD__c.field-meta.xml
<CustomField>
    <fullName>Sex_of_Intending_Parents_ANZARD__c</fullName>
    <label>Sex of Intending Parents ANZARD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = A female-male couple</fullName>
            </value>
            <value>
                <fullName>2 = A single female</fullName>
            </value>
            <value>
                <fullName>3 = A female-female couple</fullName>
            </value>
            <value>
                <fullName>4 = A single male</fullName>
            </value>
            <value>
                <fullName>5 = A male-male couple</fullName>
            </value>
            <value>
                <fullName>6 = Unknown – only for use in oocyte donation cycles to unknown intending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>