force-app/main/default/objects/Cycle__c/fields/Sex_of_Second_Born_Baby__c.field-meta.xml
<CustomField>
    <fullName>Sex_of_Second_Born_Baby__c</fullName>
    <label>Sex of Second-Born Baby</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>