force-app/main/default/objects/Cycle__c/fields/Social_Egg_Freeze_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Social_Egg_Freeze_Discount_Type__c</fullName>
    <label>Social Egg Freeze Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>