force-app/main/default/objects/Cycle__c/fields/Sperm_Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Collection_Method__c</fullName>
    <label>Sperm Collection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Andrology_Types</valueSetName>
    </valueSet>
</CustomField>