force-app/main/default/objects/Cycle__c/fields/Sperm_Site__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Site__c</fullName>
    <label>Sperm Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>