force-app/main/default/objects/Cycle__c/fields/Sperm_Source__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Source__c</fullName>
    <label>Sperm Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = A male intending parent</fullName>
            </value>
            <value>
                <fullName>2 = A sperm donor outside of the intending parents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>