force-app/main/default/objects/Cycle__c/fields/Surrogacy_Female_Intending_Parent__c.field-meta.xml
<CustomField>
    <fullName>Surrogacy_Female_Intending_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surrogacy Female Intending Parent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycles (Surrogacy Female Intending Parent)</relationshipLabel>
    <relationshipName>Cycles3</relationshipName>
    <type>Lookup</type>
</CustomField>