force-app/main/default/objects/Cycle__c/fields/Surrogacy_Male_Intending_Parent__c.field-meta.xml
<CustomField>
    <fullName>Surrogacy_Male_Intending_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surrogacy Male Intending Parent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycles (Surrogacy Male Intending Parent)</relationshipLabel>
    <relationshipName>Cycles4</relationshipName>
    <type>Lookup</type>
</CustomField>