force-app/main/default/objects/Cycle__c/fields/Third_Born_Date_of_Neonatal_Death__c.field-meta.xml
<CustomField>
    <fullName>Third_Born_Date_of_Neonatal_Death__c</fullName>
    <label>Third-Born Date of Neonatal Death</label>
    <type>Date</type>
</CustomField>