force-app/main/default/objects/Cycle__c/fields/Tota_Number_of_Slow_Frozen_Eggs_Thawed__c.field-meta.xml
<CustomField>
    <fullName>Tota_Number_of_Slow_Frozen_Eggs_Thawed__c</fullName>
    <label>Tota Number of Slow Frozen Eggs Thawed</label>
    <summarizedField>Cycle_Event__c.Number_of_Slow_Frozen_Eggs_Thawed__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>