force-app/main/default/objects/Cycle__c/fields/Total_Eggs_Vitrified__c.field-meta.xml
<CustomField>
    <fullName>Total_Eggs_Vitrified__c</fullName>
    <label>Total Eggs Vitrified</label>
    <summarizedField>Cycle_Event__c.Number_of_Eggs_Vitrified__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>