force-app/main/default/objects/Cycle__c/fields/Total_Number_of_Blast_Embryos_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Blast_Embryos_Transfered__c</fullName>
    <label>Total Number of Blast Embryos Transfered</label>
    <summarizedField>Cycle_Event__c.Number_of_Blast_Embryos_Transfered__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>