force-app/main/default/objects/Cycle__c/fields/Total_Number_of_CS_Embryos_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_CS_Embryos_Transfered__c</fullName>
    <label>Total Number of CS Embryos Transfered</label>
    <summarizedField>Cycle_Event__c.Number_of_Cleavage_St_Embryos_Transfered__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>