force-app/main/default/objects/Cycle__c/fields/Total_Number_of_Eggs_Fertilised__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Eggs_Fertilised__c</fullName>
    <label>Total Number of Eggs Fertilised</label>
    <summarizedField>Cycle_Event__c.Number_of_Embryos_Fertilised__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>