force-app/main/default/objects/Cycle__c/fields/Total_Number_of_Vitrified_CS_Embs_Thawed__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Vitrified_CS_Embs_Thawed__c</fullName>
    <label>Total Number of Vitrified CS Embs Thawed</label>
    <summarizedField>Cycle_Event__c.Number_of_Vitrified_Cleavage_Thawed__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>