force-app/main/default/objects/Cycle__c/fields/Total_number_of_Vitrified_Eggs_Thawed__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Vitrified_Eggs_Thawed__c</fullName>
    <label>Total number of Vitrified Eggs Thawed</label>
    <summarizedField>Cycle_Event__c.Number_of_Eggs_Thawed__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>