force-app/main/default/objects/Cycle__c/fields/Total_Oocytes_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Oocytes_Collected__c</fullName>
    <label>Total Oocytes Collected</label>
    <summarizedField>Cycle_Event__c.Number_of_Eggs_Collected__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>