force-app/main/default/objects/Cycle__c/fields/Treating_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Treating_Doctor__c</fullName>
    <formula>Doctor_Initiating_Cycle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treating Doctor</label>
    <type>Text</type>
</CustomField>