force-app/main/default/objects/Cycle__c/fields/Treatment_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Add_Ons__c</fullName>
    <label>Treatment Add Ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>½ egg fz split</fullName>
            </value>
            <value>
                <fullName>Ca2+</fullName>
            </value>
            <value>
                <fullName>IMSI</fullName>
            </value>
            <value>
                <fullName>Oosight</fullName>
            </value>
            <value>
                <fullName>Zymot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>