force-app/main/default/objects/Cycle__c/fields/Trigger_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Event Created</label>
    <type>Checkbox</type>
</CustomField>