force-app/main/default/objects/Cycle__c/fields/VARTA_Freeze_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>VARTA_Freeze_Expiry_Date__c</fullName>
    <formula>DATE(YEAR(DATEVALUE(Freeze_Date_of_Embryos__c)) + 5, MONTH(DATEVALUE(Freeze_Date_of_Embryos__c)), DAY(DATEVALUE(Freeze_Date_of_Embryos__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VARTA Freeze Expiry Date</label>
    <type>Date</type>
</CustomField>