force-app/main/default/objects/Cycle__c/fields/Weight_on_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Weight_on_Day_1__c</fullName>
    <label>Weight on Day 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>