force-app/main/default/objects/Cycle__c/fields/X6_Cycle_Medication_Columns__c.field-meta.xml
<CustomField>
    <fullName>X6_Cycle_Medication_Columns__c</fullName>
    <label>6 Cycle Medication Columns</label>
    <summaryFilterItems>
        <field>Cycle_Day__c.Medication_6__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Day__c.Cycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>